# rapgap

./: DIS.yaml  README.md  test.sh
rapgap-3.303/: ChangeLog  Makefile.am  Makefile.in  README  configure  configure.ac  version.m4
rapgap-3.303/ariadne/: Makefile.am  Makefile.in  arexec.F  arinit.F
rapgap-3.303/ariadne-dummy/: Makefile.am  Makefile.in  arexec.f  arinit.f
rapgap-3.303/bases51/: Makefile  Makefile.in  bhinit.f  bhplot.f  bhsave.f  bschck.f  bsdims.f  bsetgu.f  bsetgv.f  bsgetw.f  bsgrid.f  bsinit.f  bslist.f  bsordr.f  bsparm.f  bsputw.f  bsread.f  bstcnv.f  bsutim.f  bswrit.f  dhfill.f  dhinit.f  dhplot.f  drn.f  drnset.f  shcler.f  shfill.f  shinit.f  shplot.f  shrset.f  shupdt.f  spchck.f  sphist.f  spinfo.f  sprgen.f  spring.f  xhchck.f  xhfill.f  xhinit.f  xhordr.f  (+3 more)
rapgap-3.303/data/: Makefile.am  Makefile.in  steer-ep  steer-ep-charm  steer-ep-diff  steer-ep-f2c  steer-ep-ipro20  steer-ep-no-qedrad-dis  steer-ep-no-qedrad-dis-interfaces  steer-ep-no-qedrad-dis-ipro12  steer-ep-no-qedrad-dis-rivethepmc23  steer-ep-qedrad-dis  steer-ep-resgamma  steer-pp  steer-pp-rapidity-gap  steer-pp-z0
rapgap-3.303/examples/: Makefile.am  Makefile.in  rgmain.F
rapgap-3.303/include/: Makefile.am  Makefile.in  Pythia6ToHepMC2.inc  Pythia6ToHepMC3.inc  rgpypars.inc
rapgap-3.303/manual/: Makefile.am  Makefile.in  difmc.epsi  dina4.sty  dismc.epsi  mcite.sty  rapgap32.tex
rapgap-3.303/misc/: Makefile.in  abend.F  besi0.F  binomi.F  d107d1.F  d107r1.F  datime.F  dgauss.F  dgquad.F  divdif.F  expint.F  fint.F  kerset.F  ranlux.F  rgquad.F  rnormx.F  rnpssn.F  timed.F  timest.F  timex.F  ucopy.F  vzero.F
rapgap-3.303/src/: Makefile.am  Makefile.in
rapgap-3.303/src/actw/: actwfit.F  evlrd.F  evlrnfe.F  nextun.F  pardis.F  polint.F  ratint.F  rdupd.F  warnr.F
rapgap-3.303/src/gammapdf/: grspar.F  rystga.F  sasgam.F
rapgap-3.303/src/gluon/: blueml.F  ccfmstfu.F  d_xgx.F  dhfint.F  ktstfu.F  runiglu.F  ryssha.F
rapgap-3.303/src/h1qcd/: fluxh1.F  h1qcd2006.F  h1qcdfit.F  i_lo_q3g0.F  i_lo_q3g1.F  i_lo_q3g3.F  i_nlo_q3g0.F  i_nlo_q3g1.F  i_nlo_q3g3.F  pion_init.F  pion_xpq.F  qcd_1994.F  qcd_2006.F  xyinter.F
rapgap-3.303/src/hardpom/: dgrv_nln.F  f2blw.F  f2dhw.F  f2mcd.F  f2md.F
rapgap-3.303/src/heracles466/: README  brasse.f  d01ajf.f  dfnc00.f  dfncii.f  dialfs.f  diflop.f  djgevt.F  djgvar.F  dx1fcf.f  f2allm.f  fiuser.f  flgint.F  flgint.forig  flipol.f  flqint.F  fltabl.f  gausk1.f  gausk2.f  heracl466.F  hs46ini.F  hsacpt.F  hsbcga.f  hsbkin.f  hsblkd.fsave  hsbrnc.f  hsbxca.f  hsbxcv.f  hsbxi0.f  hsbxi5.f  hscc22.f  hsccba.f  hsccbq.f  hsccg1.f  hsccg2.f  hscckl.f  hsccms.f  hsccqf.f  hsccqi.f  hsccsa.f  (+144 more)
rapgap-3.303/src/nikzak/: nikzak.F
rapgap-3.303/src/pdiss/: decdel.F  deceta.F  (+14 more)
(+206 files in other folders)
