## Copyright (C) 2006 Free Software Foundation, Inc.
## This Makefile.am is free software; the Free Software Foundation
## gives unlimited permission to copy, distribute and modify it.

#pkgdatadir = ${datadir}
# pkgdatadir = ../data
dist_data_DATA = steer-ep steer-ep-resgamma \
			steer-ep-no-qedrad-dis steer-ep-qedrad-dis \
                  steer-ep-no-qedrad-dis-ipro12 \
			steer-ep-charm  steer-ep-f2c \
                  steer-ep-diff steer-ep-ipro20 \
			steer-pp-rapidity-gap steer-pp \
                  steer-pp-z0 \
			ccfm-final-setA1.dat   ccfm-ipgg0ns-1-0-all-lhc.dat  \
           		ccfm-final-setB0-.dat  ccfm-ipgg1ns1-0-all-lhc.dat   \
             	ccfm.dat ccfm-final-setB0.dat ccfm-ipgg2ns2-0-all-lhc.dat \
             	ccfm-final-setA0-.dat  ccfm-final-setB0+.dat  kmr.dat \
             	ccfm-final-setA0.dat   ccfm-final-setB1.dat   kms.dat  \
             	ccfm-final-setA0+.dat  ccfm-gam.dat ccfm-setC.dat 
